Bug 215335 - [patch] [syslogd] restart of logging subprocess broken with r286304 and MFC's
Summary: [patch] [syslogd] restart of logging subprocess broken with r286304 and MFC's
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 11.0-STABLE
Hardware: Any Any
: --- Affects Some People
Assignee: Hiroki Sato
URL:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2016-12-16 08:56 UTC by Eugene Grosbein
Modified: 2017-07-07 13:47 UTC (History)
6 users (show)

See Also:
eugen: mfc-stable11+
eugen: mfc-stable10+
pi: mfc-stable9-


Attachments
unbreak logging subprocess restart (407 bytes, patch)
2016-12-16 08:56 UTC, Eugene Grosbein
no flags Details | Diff
r310888 patch for stable/10 and 11 (2.18 KB, patch)
2016-12-31 11:24 UTC, Hiroki Sato
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Grosbein 2016-12-16 08:56:36 UTC
Created attachment 178007 [details]
unbreak logging subprocess restart

Revision 286304 and MFC to stable branches broke restart of unexpectedly finished logging subprocess defined with "|command ..." syntax.

Trivial patch fixing this is attached.
Comment 1 commit-hook freebsd_committer freebsd_triage 2016-12-31 03:08:20 UTC
A commit references this bug:

Author: hrs
Date: Sat Dec 31 03:07:48 UTC 2016
New revision: 310888
URL: https://svnweb.freebsd.org/changeset/base/310888

Log:
  Retry to open an F_PIPE process when it dies unexpectedly.

  Reported by:	Eugene Grosbein
  PR:		215335

Changes:
  head/usr.sbin/syslogd/syslogd.c
Comment 2 Hiroki Sato freebsd_committer freebsd_triage 2016-12-31 03:09:59 UTC
(In reply to Eugene Grosbein from comment #0)
Could you please try a patch in r310888 and let me know if the problem is solved or not?
Comment 3 Eugene Grosbein 2016-12-31 10:31:59 UTC
(In reply to Hiroki Sato from comment #2)

The patch does not apply to stable/11 significantly, cannot test it.
Comment 4 Hiroki Sato freebsd_committer freebsd_triage 2016-12-31 11:24:10 UTC
Created attachment 178415 [details]
r310888 patch for stable/10 and 11
Comment 5 Hiroki Sato freebsd_committer freebsd_triage 2016-12-31 11:24:59 UTC
(In reply to Eugene Grosbein from comment #3)
A patch for stable/10 and 11 is attached.
Comment 6 Eugene Grosbein 2016-12-31 18:11:40 UTC
(In reply to Hiroki Sato from comment #4)

This patch works for stable/11, thank you!
Comment 7 Eugene Grosbein freebsd_committer freebsd_triage 2017-05-19 07:38:22 UTC
(In reply to Hiroki Sato from comment #5)

Please perform MFC for upcoming 11.1-RELEASE.
Comment 8 commit-hook freebsd_committer freebsd_triage 2017-07-07 11:55:08 UTC
A commit references this bug:

Author: eugen
Date: Fri Jul  7 11:54:46 UTC 2017
New revision: 320772
URL: https://svnweb.freebsd.org/changeset/base/320772

Log:
  MFC r310888:

    Retry to open an F_PIPE process when it dies unexpectedly.

  PR:		215335
  Reviewed by:	ae
  Approved by:	az (mentor)

Changes:
_U  stable/10/
  stable/10/usr.sbin/syslogd/syslogd.c
Comment 9 commit-hook freebsd_committer freebsd_triage 2017-07-07 13:45:36 UTC
A commit references this bug:

Author: eugen
Date: Fri Jul  7 13:44:19 UTC 2017
New revision: 320776
URL: https://svnweb.freebsd.org/changeset/base/320776

Log:
  MFC r310888:

    Retry to open an F_PIPE process when it dies unexpectedly.

  PR:           215335
  Reviewed by:  ae
  Approved by:  az (mentor)

Changes:
_U  stable/11/
  stable/11/usr.sbin/syslogd/syslogd.c
Comment 10 Eugene Grosbein freebsd_committer freebsd_triage 2017-07-07 13:47:02 UTC
Fixed in all supported branches.