MFC r310888:

Retry to open an F_PIPE process when it dies unexpectedly.

PR:		215335
Reviewed by:	ae
Approved by:	az (mentor)